<resources>
    <string name="app_name">mobile</string>
    <string name="ambient_temp">Ambient Temp A5</string>
    <string name="adc3">ADC3</string>
    <string name="adc4">ADC4</string>
    <string name="adc5">ADC5</string>
    <string name="dac1out">DAC1OUT</string>
    <string name="pwm3">PWM3 Motor Duty</string>
    <string name="pwm4">PWM4</string>
    <string name="pwm5">PWM5</string>
    <string name="pwm6">PWM6</string>
</resources>
